# bector

./: CMakeLists.txt  LICENSE  README.md
include/: bector.hpp
include/constructors/: constructors.cpp
include/functions/: capacity.cpp  conversion.cpp  element_access.cpp  modifiers.cpp
include/operators/: assignment.cpp  binary.cpp  comparison.cpp  unary.cpp
